--- a/01_storing_data/03_store_clicks/index.html
+++ b/01_storing_data/03_store_clicks/index.html
@@ -10,13 +10,12 @@
   <button data-component-click-me >
     Click Me!
   </button>
-  <p></p>
-  <div>
-    <span>Log:</span><span data-component-log ></span>
-  </div>
-  <script src="index.js" ></script>
-  <script src="index2.js" ></script>
-  <script src="index3.js" ></script>
+  <button  data-component-alternative-click-me >
+    No click me!
+  </button>
+  <script type="module" src="index.js" ></script>
+  <script type="module" src="index2.js" ></script>
+  <script type="module" src="index3.js" ></script>
 
 </body>
 </html>
