--- a/02_maniuplating_data/01_map/index.html
+++ b/02_maniuplating_data/01_map/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
      <button data-component-button data-id="15253631" >Button-1</button>
-     <button data-component-button data-id="15253631" >Button-2</button>
+     <button data-component-button data-id="16472912" >Button-2</button>
+     <button data-component-button data-id="164353" >Button-3</button>
+
     <script type="module" src="index.js"></script>
     <script type="module" src="index2.js"></script>
   </body>
