--- a/02_maniuplating_data/02_reduce/index.html
+++ b/02_maniuplating_data/02_reduce/index.html
@@ -13,7 +13,9 @@
       <article>
         <h2>Awesome product</h2>
         <img src="" alt="awesome" />
-        <span data-component-quantity> 3 </span>
+        <div>
+          <span>Quantity:</span><span data-component-quantity> 3 </span>
+        </div>
         <div>
           <span>price:</span>
           <span data-component-price data-price="30">30</span>
@@ -22,7 +24,9 @@
       <article>
         <h2>Awesome product</h2>
         <img src="" alt="awesome" />
-        <span data-component-quantity> 2 </span>
+        <div>
+          <span>Quantity:</span><span data-component-quantity> 3 </span>
+        </div>
         <div>
           <span>price:</span>
           <span data-component-price data-price="30">30</span>
