--- a/02_maniuplating_data/03_filter/index.html
+++ b/02_maniuplating_data/03_filter/index.html
@@ -32,6 +32,17 @@
           <span data-component-price data-price="30">30</span>
         </div>
       </article>
+      <article>
+        <h2>Awesome Gift</h2>
+        <img src="" alt="awesome" />
+        <div>
+          <span>Quantity:</span><span data-component-quantity> 3 </span>
+        </div>
+        <div>
+          <span>price:</span>
+          <span data-component-price data-is-gift="true" data-price="30">30</span>
+        </div>
+      </article>
     </section>
     <button data-component-update >Update total!</button>
     <section>
