--- a/03_conditional_logic/02_avoiding_errors_from_unedfined_dom_objects/product-page.html
+++ b/03_conditional_logic/02_avoiding_errors_from_unedfined_dom_objects/product-page.html
@@ -5,15 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>List of things!</h1>
-  <li data-component-list-item  >
-    <span data-component-title >Name goes here:</span>
-    <span data-component-price >Price per unit</span>
-  </li>
+    <div></div>
+    <div></div>
   
-  <script type="module" src="index.js" ></script>
+  <script defer src="global.js" ></script>
 
 </body>
 </html>
