--- a/03_conditional_logic/02_more_conditional_logic/product-page.html
+++ b/03_conditional_logic/02_more_conditional_logic/product-page.html
@@ -8,9 +8,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div></div>
-    <div></div>
-  
+  <div>
+    <img class="image product" src="./cats.jpg" >
+    <div class="heading" >Hey this is our product, buy damn it</div>
+    <div class="heading price" >19.99</div>
+    <div class="button submit" >Buy it now!</div>
+  </div>
+  <img src="./cats-that-obey-commands.jpg" >
   <script defer src="global.js" ></script>
 
 </body>
