--- a/03_conditional_logic/02_more_conditional_logic/home-page.html
+++ b/03_conditional_logic/02_more_conditional_logic/home-page.html
@@ -5,13 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div>
+  <div class="container" >
     <img class="image" src="./cats.jpg" >
-    <div class="heading" >Buy Our product please, we are desperate!</div>
-    <div class="heading" >Please or I'll have to eat my cat!</div>
-    <div data-link="/product-page.html" class="button" >Check it out!</div>
+    <div class="content" >
+      <div class="heading" >Buy Our product please, we are desperate!</div>
+      <div class="heading sub" >Please or I'll have to eat my cat!</div>
+      <div data-link="/product-page" class="button" >Check it out!</div>
+    </div>
   </div>
   <img src="./cats-that-obey-commands.jpg" >
   
