--- a/03_conditional_logic/02_more_conditional_logic/product-page.html
+++ b/03_conditional_logic/02_more_conditional_logic/product-page.html
@@ -8,13 +8,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div>
-    <img class="image product" src="./cats.jpg" >
-    <div class="heading" >Hey this is our product, buy damn it</div>
-    <div class="heading price" >19.99</div>
-    <div class="button submit" >Buy it now!</div>
+  <div class="container" >
+    <img class="image" src="./cats.jpg" >
+    <div class="content" >
+      <div class="heading" >Buy Our product please, we are desperate!</div>
+      <div class="heading sub price" >Only $1999.99!</div>
+      <form action="/nothing">
+        <div data-link="/product-page" class="button submit" >Buy it</div>
+      </form>
+    </div>
   </div>
   <img src="./cats-that-obey-commands.jpg" >
+  
   <script defer src="global.js" ></script>
 
 </body>
