--- a/03_conditional_logic/02_more_conditional_logic/product-page.html
+++ b/03_conditional_logic/02_more_conditional_logic/product-page.html
@@ -13,9 +13,7 @@
     <div class="content" >
       <div class="heading" >Buy Our product please, we are desperate!</div>
       <div class="heading sub price" >Only $1999.99!</div>
-      <form action="/nothing">
-        <div data-link="/product-page" class="button submit" >Buy it</div>
-      </form>
+        <div class="button submit" >Buy it</div>
     </div>
   </div>
   <img src="./cats-that-obey-commands.jpg" >
